primeio deploy da aplicação

--- a/src/app/questionario/pagina-principal/corpo/corpo.component.scss
+++ b/src/app/questionario/pagina-principal/corpo/corpo.component.scss
@@ -32,7 +32,7 @@ li {
 
 .walkthrough {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
-  background: linear-gradient(to right bottom, #9e66c6, #6027e1);
+  background: linear-gradient(to right bottom, #6027e1,#3B2F63);
   border-radius: 0;
   display: none;
   flex-direction: column;
