primeio deploy da aplicação

--- a/src/app/errors/not-found/not-found.component.html
+++ b/src/app/errors/not-found/not-found.component.html
@@ -1,7 +1,6 @@
 <div class="text-center">
-    <h2>This page is not avaliable</h2>
+    <h2>Pagina não exite!</h2>
     <p>
-        The link you have acccessed may be broken or
-        the page may have ben removed.
+        vá para <a href="/questionario">questionairo</a>
     </p>
 </div>
